style.css
        /* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
    box-sizing: border-box;
  }
  
  /* 2. Remove default margin */
  * {
    margin: 0;
  }
  
  /* 3. Enable keyword animations */
  @media (prefers-reduced-motion: no-preference) {
    html {
      interpolate-size: allow-keywords;
    }
  }
  
  body {
    /* 4. Add accessible line-height */
    line-height: 1.5;
    /* 5. Improve text rendering */
    -webkit-font-smoothing: antialiased;
  }
  
  /* 6. Improve media defaults */
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  
  /* 7. Inherit fonts for form controls */
  input, button, textarea, select {
    font: inherit;
  }
  
  /* 8. Avoid text overflows */
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  
  /* 9. Improve line wrapping */
  p {
    text-wrap: pretty;
  }
  h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
  }
  
  /*
    10. Create a root stacking context
  */
  #root, #__next {
    isolation: isolate;
  }
  :root {
    --darkblue: rgb(5, 5, 181);
    --lightblue: rgb(40, 125, 171);
    --darkback: rgba(0, 0, 0, 0.529);
    --backgroundBlue: rgba(51, 51, 241, 0.49);
  }
  
  body {
    background-image: url("./test.jpg");
    color: white;
    font-family: "default";
    overflow: auto;
    user-select: none;
 }


 @font-face {
  font-family: "default";
  src: url("./Doto/Doto-VariableFont_ROND\,wght.ttf");
 }


 .page{
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

    .logoBlock {
      display: flex;
      justify-content: center;
      background-color: var(--darkback);
      z-index: -2;
    }

  
      #logo {
        font-family: "default";
        font-size: 7rem;
        font-weight: 300;
      }
.navbar{
  position: relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 6rem;
  font-size: 3rem;
  padding-top: 1rem;
  font-weight: bold;
}

.navbarLeft, .navbarRight {
  position: absolute;
  z-index: -1;
}

.navbarLeft{
  bottom: 60px;
  left: 240px;
  transition: all 0.4s;
}

.navbarRight{
  right: 280px;
  top: 72px;
}

.markerToggle, .restart {
   background-color: var(--darkback);
   color: var(--lightblue);
   border-radius: 1rem;
   border-style: none;
   transition: all 0.4s;
   cursor: pointer;
}

.markerToggle.deactivate {
  color: rgb(255, 255, 255);
  background: none;
  pointer-events: none;
}

.markerToggle:hover, .restart:hover {
  background-color: var(--backgroundBlue);
}

.game {
  display: flex;
  justify-content: center;
}

.gameBoard {
  font-family: "default";
  justify-content: center;
  margin-top: 1rem;
  width: 60%;
  height: 50%;
  display: grid;
  grid: repeat(3, 200px)/ repeat(3, 200px);
 transition: all 0.6s;
}

.gameCell {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 13rem;
  border: solid 2px var(--lightblue);
  background-color: #120b46;
  background-image:
    linear-gradient(90deg, #44444482 1px, transparent 1px),
    linear-gradient(#44444482 1px, transparent 1px);
  background-size: 9px 9px;
  transition: all 0.4s;
}

.active {
  background: var(--darkback);
  margin: 2px;
  cursor: pointer;
}

.gameCell.active.marked {
  background-color: transparent;
  cursor:alias;
}

.gameCell.active:hover{
  background-color: var(--backgroundBlue);
}

.gameCell.active.marked:hover{
  background-color: transparent;
}

.gameCell.active.marked.markX {
 color:rgba(0, 0, 0, 0.6);
}

.gameCell.active.marked.markO {
  color: rgba(255, 255, 255, 0.6);
}

.hide {
  visibility: hidden;
}

.play {
  margin-top: 1rem;
  align-self: center;
  height: 4rem;
  width: 600px;
  border-radius: 1rem;
  font-size: 2rem;
  background-color: var(--backgroundBlue);
  border-style: none;
  color: white;
  transition: all 0.4s;
  cursor: pointer;
  font-weight: bold;
}

.play:hover {
  background-color: var(--darkblue);
}

.play.deactivate {
  background: none;
  pointer-events: none;
}

.footer {
  font-weight: 700;
  display: flex;
  gap: 3rem;
  margin-left: 3rem;
  font-size: 18px;
  color:rgb(255, 255, 255);
}

a{
  text-decoration: none;
  color: inherit;
}

.creator {
  color:rgb(255, 175, 255);
  font-size: 24px;
}

#showPixels {
  border-radius: 7px;
  border-color: rgba(0, 0, 255, 0.42);
  background-color: rgba(255, 255, 255, 0.55);
  cursor: pointer;

}

#showPixels:hover {
  background-color: white;
}

#showPixels.opossumShowed {
  background-color: var(--lightblue);
  color: white;
}

#showPixels.opossumShowed:hover {
  background-color: var(--darkblue);
}

@media (max-width: 768px) {
  body {
    background-position: center center; 
    background-repeat: no-repeat; 
    background-size: cover; 
    font-family: "default";
    overflow: auto;
    user-select: none;
  }

  .navbar {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    font-size: 2rem;
  }

  .board {
    transform: scale(0.7); 
  }

  .logoBlock #logo {
    font-size: 4rem;
  }

  .play {
    width: 90%;
    font-size: 1.5rem;
    padding: 0.8rem 1.2rem;
  }

  .gameBoard {
    width: 60vw;
    max-width: 100%;
    aspect-ratio: 1;
    grid: repeat(3, 125px)/ repeat(3, 125px);
    margin-bottom: 2rem;
  }

  .gameCell {
    font-size: 3rem;
  }

  .markerToggle,
  .restart,
  .play {
    font-size: 1.2rem;
    padding: 0.5rem 1rem;
  }

  .play {
  width: 50%;
  }

  .footer {
    font-size: 0.8rem;
    padding: 1rem;
  }

  .creator {
    font-size: 1.3rem;
  }

  #showPixels{
    font-size: 1.3rem;
  }

  /* Ukrywamy absolutnie pozycjonowane elementy */
 .navbarLeft, .navbarRight{
    opacity: 0;
    visibility: hidden;
    pointer-events: none; /* żeby nie były klikalne */
  }
}

